// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EqualLint auto fix: auto fix 1`] = `

'' == false;
0 == false;
false == false;
'' != false;

'' === false;
0 === false;

      ↓ ↓ ↓ ↓ ↓ ↓

"" === false;
0 === false;
false == false;
"" !== false;
"" === false;
0 === false;


`;

exports[`EqualLint default: default 1`] = `

'' == false;
0 == false;
false == false;
'' != false;

'' === false;
0 === false;

      ↓ ↓ ↓ ↓ ↓ ↓

"" == false;
0 == false;
false == false;
"" != false;
"" === false;
0 === false;


`;
